kubernetes/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
  labels:
    app: user-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: user-api
